<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/timer_border">

    <LinearLayout
        android:id="@+id/lin_lay_language_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lin_lay_ok_cancel_language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioGroup
            android:id="@+id/language_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fadingEdge="none|vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <RadioButton
                android:id="@+id/language_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_english" />


            <RadioButton
                android:id="@+id/language_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_french" />

            <RadioButton
                android:id="@+id/language_de"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_german" />

            <RadioButton
                android:id="@+id/language_pl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_polish" />

            <RadioButton
                android:id="@+id/language_pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_portuguese" />

            <RadioButton
                android:id="@+id/language_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_russian" />

            <RadioButton
                android:id="@+id/language_es"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbSelLanguageOnClick"
                android:text="@string/language_spanish" />


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_ok_cancel_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_lay_language_radios">

        <Button
            android:id="@+id/button_language_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@color/settings_language_buttons"
            android:text="@string/cancel_button"/>

        <Button
            android:id="@+id/button_language_ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@color/settings_language_buttons"
            android:text="@string/ok_button"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>