<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_sending_time_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="#afb5c6">

    <TextView
        android:id="@+id/setup_sending_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sending_time_setup_label"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#e1e4f3">

        <TextView
            android:id="@+id/calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/calendar_label"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/countdown_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/count_down_label"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textStyle="bold"
            android:onClick="onCountdownTimerClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#e1e4f3"
        android:gravity="center">

        <TextView
            android:id="@+id/choosen_sending_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/choosen_sending_time_text_label"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/choosen_sending_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/choosen_sending_time_value"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
</LinearLayout>