<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/settings_background">

    <LinearLayout
        android:id="@+id/main_setup_lin_layout"
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:background="@color/settings_buttons_background"
            android:gravity="center_vertical"
            android:text="@string/settings_label"
            android:textAlignment="center"
            android:textColor="@color/settings_text"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/settings_rate_us"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="@color/settings_buttons_background"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/rate_app"
            android:textColor="@color/settings_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_change_language"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="@color/settings_buttons_background"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/select_language"
            android:textColor="@color/settings_text"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>